k8s/job-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: job
  template:
    metadata:
      labels:
        component: job
    spec:
      containers:
        - name: job
          image: eu.gcr.io/job:v0.0.1
          imagePullPolicy: IfNotPresent
