k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: eu.gcr.io/server:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
